[package]
name = "libcpc-sys"
version = "0.1.1"
edition = "2021"
description = "Libcpc bindings"
repository = "https://github.com/SiliconLabs/cpc-daemon"
keywords = ["cpc", "siliconlabs"]
license-file = "LICENSE"
links = "cpc"

[dependencies]
num_enum = "0.7.2"

[build-dependencies]
bindgen = "0.69.2"
pkg-config = "0.3.29"
