[package]
name = "libcpc"
version = "0.3.1"
edition = "2021"
description = "Safe wrapper over libcpc-sys"
repository = "https://github.com/SiliconLabs/cpc-daemon"
keywords = ["cpc", "siliconlabs"]
license-file = "LICENSE"

[dependencies]
libcpc-sys = { path = "../libcpc-sys" }
num_enum = "0.7.2"
thiserror = "1.0.56"
